2013-03-24: Allow tests to specify axis labels explicitly. Use this to write
            something better than 'ms' on the latency axes.

2013-03-24: Add box plot type.

2013-03-23: Disable hostname lookup when loading data files or the GUI; should
            fix issue with hostname lookup failing when a datafile with an
            unreachable host is loaded.

2013-03-23: Add GUI for interactive browsing of results.

2013-03-20: rc-file should specify hosts rather than host.

2013-03-19: Record path towards machine running test in INGRESS_INFO of remote
            metadata object.

2013-03-19: Capture IP address info per-interface.

2013-03-16: Scale x axis to include all captures data points, even if they go beyond
            the configured test duration.

2013-03-16: Run ping with -n.

2013-03-05: Add remote metadata support.

2013-03-04: More extended metadata.

2013-03-01: Support an rcfile and supply an example file.

2014-03-01: Add metadata output formatter to extract metadata from stored data files.

2014-03-01: Add collection of several extended metadata items.

2014-01-22: Initial provisions for optionally gathering extended metadata on test runs.

2014-01-19: Add detection of supported netperf options and support passing -e to
            netperf for UDP_RR socket timeout (adds --socket-timeout parameter).

2014-01-18: Add rrul_be test using exclusively BE traffic.

2013-12-25: Don't crash on empty values in CDF plots.

2013-11-25: Release v0.6.1.

2013-11-25: Fix module rewrite in setup.py and numpy version output in --version.

2013-11-25: Release v0.6.0.

2013-10-31: Adjust spacing for title and annotation to work better with exported plots.

2013-09-27: Add description of output formats to man page.

2013-09-27: Add the --note argument to store arbitrary notes in the JSON metadata.

2013-09-27: Print custom title on separate line on plots.

2013-09-26: Add man page.
