@@ -156,6 +156,9 @@ only make sense combined with \fB\-f\fI plot\fR.
 \fB\-z\fR, \fB\-\-zero\-y\fR
 Always start y axis of plot at zero, instead of autoscaling the axis (also disables log scales). Autoscaling is still enabled for the upper bound.
 .TP
+\fB\-I\fR, \fB\-\-invert\-latency\-y\fR
+Invert the y-axis for latency data series (making plots show 'better values upwards').
+.TP
 \fB\-\-disable\-log\fR
 Disable log scales on plots.
 .TP
