@@ -109,7 +109,20 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents_2">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="1">
+     <item row="3" column="0">
+      <widget class="QCheckBox" name="checkTitle">
+       <property name="toolTip">
+        <string>Draw plot title?</string>
+       </property>
+       <property name="statusTip">
+        <string>Draw plot title?</string>
+       </property>
+       <property name="text">
+        <string>Title</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
       <widget class="QCheckBox" name="checkLegend">
        <property name="toolTip">
         <string>Draw plot legend?</string>
@@ -122,7 +135,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
+     <item row="2" column="0">
       <widget class="QCheckBox" name="checkAnnotation">
        <property name="toolTip">
         <string>Annotate plot (at the bottom)?</string>
@@ -161,20 +174,20 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QCheckBox" name="checkTitle">
+     <item row="1" column="0">
+      <widget class="QCheckBox" name="checkInvertY">
        <property name="toolTip">
-        <string>Draw plot title?</string>
+        <string>Invert the y-axis for latency data series (making plots show 'better values upwards').</string>
        </property>
        <property name="statusTip">
-        <string>Draw plot title?</string>
+        <string>Invert the y-axis for latency data series (making plots show 'better values upwards').</string>
        </property>
        <property name="text">
-        <string>Title</string>
+        <string>Invert latency Y-axis</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
+     <item row="1" column="1">
       <widget class="QCheckBox" name="checkScaleMode">
        <property name="toolTip">
         <string>Use extra data files for axis scaling instaed of plotting them?</string>
