@@ -1,3 +1,5 @@
+2013-04-09: Add toggle to invert y-axis on latency measurements.
+
 2013-03-24: Allow tests to specify axis labels explicitly. Use this to write
             something better than 'ms' on the latency axes.
 
